# graph-training

./: .gitignore  CLAUDE.md  README.md  data.py  dataset_statistics.ipynb  eval-length-generalization.ipynb  eval_comparison.py  eval_length_generalization.py  generate.py  main.py  model.py  postrain.py  pyproject.toml  requirements.txt  run_comparison.sh  sweep_lr.sh  teacher.py  testmodel.ipynb  tokenizer_utils.py  train.py
.hydra/: config.yaml  hydra.yaml
conf/: config.yaml
